--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <title>Smile School</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="header-banner">
@@ -30,7 +30,7 @@
                 <button>REGISTER FOR FREE</button>
             </div>
             <div class="learn-pros">
-                <h2>Learn<span>from the pros</span></h2>
+                <h2>Learn <span>from the pros</span> </h2>
                 <div class="pros">
                     <div>
                         <img src="./images/1.png" alt="Phillip Massey">
@@ -60,120 +60,131 @@
             </div>
         </section>
     </div>
-    
     <main>
-        <section>
+        <section class="quote-section">
             <div>
                 <img src="./images/5.png" alt="Peterson Name">
             </div>
-            <div>
+            <div class="quote">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
                 <h3>Peterson Name</h3>
                 <p>weather presenter</p>
             </div>
         </section>
-        <section>
-            <h2>Most popular tutorials</h2>
+        <section class="tutorials">
+            <h2>Most <span>Popular</span> Tutorials</h2>
             <div>
-                <img src="./images/9.png" alt="Diagonal Smile">
-                <img src="./images/play.png" alt="Play Icon">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1.png" alt="Phillip Massey">
-                    <h4>Phillip Massey</h4>
+                <div class="tutorial">
+                    <img src="./images/9.png" alt="Diagonal Smile">
+                    <img src="./images/play.png" alt="Play Icon">
+                    <h3>Diagonal Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="Phillip Massey">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="tutorial-footer">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                <div class="tutorial">
+                    <img src="./images/7.png" alt="Sad Smile">
+                    <img src="./images/play.png" alt="Play Icon">
+                    <h3>Sad Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="Phillip Massey">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="tutorial-footer">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="./images/7.png" alt="Sad Smile">
-                <img src="./images/play.png" alt="Play Icon">
-                <h3>Sad Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1.png" alt="Phillip Massey">
-                    <h4>Phillip Massey</h4>
+                <div class="tutorial">
+                    <img src="./images/8.png" alt="Natural Smile">
+                    <img src="./images/play.png" alt="Play Icon">
+                    <h3>Natural Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="Phillip Massey">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="tutorial-footer">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                <div class="tutorial">
+                    <img src="./images/6.png" alt="Happy Smile">
+                    <img src="./images/play.png" alt="Play Icon">
+                    <h3>Happy Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="Phillip Massey">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="tutorial-footer">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="./images/8.png" alt="Natural Smile">
-                <img src="./images/play.png" alt="Play Icon">
-                <h3>Natural Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1.png" alt="Phillip Massey">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="./images/6.png" alt="Happy Smile">
-                <img src="./images/play.png" alt="Play Icon">
-                <h3>Happy Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1.png" alt="Phillip Massey">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
             </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
-            <div>
-                <img src="./images/smile.png" alt="Smile icon">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.png" alt="Smile icon">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.png" alt="Smile icon">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.png" alt="Smile icon">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="membership">
+            <h2>Free <span>membership</span> </h2>
+            <div class="membership-container">
+                <div>
+                    <img src="./images/smile.png" alt="Smile icon">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="./images/smile.png" alt="Smile icon">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="./images/smile.png" alt="Smile icon">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="./images/smile.png" alt="Smile icon">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
-        <section>
-            <h2>F.A.Q</h2>
-            <div>
+        <section class="faq">
+            <h2>F.A.Q.</h2>
+            <div class="faq-container">
                 <article>
                     <h3>How does this work?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
